# dadafits

./: .gitignore  .zenodo.json  CMakeLists.txt  Makefile  NOTICE.txt  PSRFITS_template.txt  README.longkey  README.md  fits_example.c  longkey.c  main.c  sc34_1bit_I_reduced.txt  template.txt
cmake/: Findcfitsio.cmake
src/: config.h.in  dadafits_internal.h  downsample.c  fits_dump.c  fits_io.c  main.c  manipulate.c  sb_util.c
templates/: sc34_1bit_I_reduced.txt  sc34_1bit_I_reduced_NO_FREQ.txt  sc34_1bit_I_reduced_NO_FREQ_WTS.txt  sc3_IQUV.txt  sc4_IQUV.txt
